Java 12 Support
Tweaks to make the code compatible for java 12. The project will still
be compiled for java 8 but can be used on java 12.