@@ -1,19 +1,27 @@
 package io.github.tomaso2468.rpgonline.net;
 
-import java.security.*;
+import java.security.InvalidKeyException;
+import java.security.Key;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.NoSuchAlgorithmException;
+import java.security.PublicKey;
+import java.util.Base64;
 
-import javax.crypto.*;
+import javax.crypto.BadPaddingException;
+import javax.crypto.Cipher;
+import javax.crypto.IllegalBlockSizeException;
+import javax.crypto.KeyAgreement;
+import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
-
-import java.io.*;
 
 import org.newdawn.slick.util.Log;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 /**
  * A system for setting up key exchange for AES.
+ * 
+ * Modified by Tomas O'Shea to be compatible with jdk12
+ * 
  * @author Jegan Babu, Wojciech Wirzbicki
  */
 class AESSecurityCap {
@@ -84,7 +92,7 @@ class AESSecurityCap {
             Cipher c = Cipher.getInstance(ALGO);
             c.init(Cipher.ENCRYPT_MODE, key);
             byte[] encVal = c.doFinal(msg.getBytes());
-            return new BASE64Encoder().encode(encVal);
+            return Base64.getEncoder().encodeToString(encVal);
         } catch (BadPaddingException | InvalidKeyException | NoSuchPaddingException | IllegalBlockSizeException | NoSuchAlgorithmException e) {
         	Log.error(e);
         }
@@ -101,10 +109,10 @@ class AESSecurityCap {
             Key key = generateKey();
             Cipher c = Cipher.getInstance(ALGO);
             c.init(Cipher.DECRYPT_MODE, key);
-			byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+			byte[] decordedValue = Base64.getDecoder().decode(encryptedData);
             byte[] decValue = c.doFinal(decordedValue);
             return new String(decValue);
-        } catch (BadPaddingException | InvalidKeyException | NoSuchPaddingException | IllegalBlockSizeException | NoSuchAlgorithmException | IOException e) {
+        } catch (BadPaddingException | InvalidKeyException | NoSuchPaddingException | IllegalBlockSizeException | NoSuchAlgorithmException e) {
            Log.error(e);
         }
         return encryptedData;
